# ktree

./: .gitignore  CHANGELOG.md  CODE_RUNDOWN.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: README.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
ktree/: __init__.py  app.py  k8s_manager.py  main.py
ktree/widgets/: __init__.py  column.py  custom_option_list.py  details_panel.py  help.py
scripts/: BUILD.md  CROSS_PLATFORM_BUILD.md  build_binaries.py  build_binaries.sh  build_linux.sh  build_windows.md
tests/: README.md  __init__.py  conftest.py  test_app_functional.py  test_k8s_manager_functional.py  test_widgets_functional.py
